# MicroDronITESM

./: .gitignore  .gitmodules  README.md  app.c  main  main.c
ESP/: ESP8266_PIC32_TELNET_SIMPLER.ino
ESP/ESP8266_PIC32_TELNET_SIMPLER/: ESP8266_PIC32_TELNET_SIMPLER.ino
IMU-Code/: IMU-Code.ino  SparkFunMPU9250-DMP.h
MicroDron/firmware/: CMakeLists.txt
MicroDron/firmware/MicroDron.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-local-default.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
MicroDron/firmware/MicroDron.X/nbproject/private/: SuppressibleMessageMemo.properties  configurations.xml  private.xml
MicroDron/firmware/src/: app.c  app.h  drone_msg_handler.c  drone_msg_handler.h  imu_msg_handler.c  imu_msg_handler.h  wifi_msg_sender.c  wifi_msg_sender.h
MicroDron/firmware/src/system_config/default/: FreeRTOSConfig.h  app_mz.ld  configuration.xml  default.mhc  system_config.h  system_definitions.h  system_init.c  system_interrupt.c  system_interrupt_a.S  system_tasks.c
MicroDron/firmware/src/system_config/default/framework/driver/oc/: drv_oc.h  drv_oc_static.h
MicroDron/firmware/src/system_config/default/framework/driver/tmr/: drv_tmr.h  drv_tmr_static.h
MicroDron/firmware/src/system_config/default/framework/driver/usart/: drv_usart.h  drv_usart_definitions.h  drv_usart_static.h
Testing/: main  main.c
Testing/ControlTests/: CMakeLists.txt
Testing/ControlTests/src/: DroneDrawable.cpp  DroneDrawable.h  PropellerDrawable.cpp  PropellerDrawable.h  main.cpp
(+63 files in other folders)
